# Pneumonia-Detection-Pytorch

./: .gitignore  README.md  pyproject.toml
src/: resnet18.ipynb  resnet18_colab.ipynb  train_model.py
